# devmark-ml-server

./: Dockerfile  Makefile  docker-compose.yml  index.py  pyproject.toml
.github/workflows/: deploy.yml
src/: main.py  models.py
src/load_model/: load_model.py
src/tokenizer/: kkma_tokenizer.py
